--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,4 +31,6 @@ target_compile_options(${COMPONENT_LIB} PUBLIC
 )
 
 target_compile_options(${COMPONENT_LIB} PUBLIC
-    "-DCFG_TUSB_MCU=OPT_MCU_ESP32S3")
+    "-DCFG_TUSB_MCU=OPT_MCU_ESP32S3"
+    "-DCFG_TUSB_DEBUG=${CONFIG_ESP_TINYUSB_DEBUG_LEVEL}"
+)
