--- a/Kconfig
+++ b/Kconfig
@@ -20,6 +20,59 @@ menu "ESP TinyUSB Audio"
                 Set the stack size of the default TinyUSB main task.
     endmenu
 
+    menu "Descriptor configuration"
+        config ESP_TINYUSB_DESC_CUSTOM_VID
+            hex "VID: Custom vendor ID"
+            default 0xcafe
+            help
+                Custom Vendor ID.
+
+        config ESP_TINYUSB_DESC_CUSTOM_PID
+            hex "PID: Custom product ID"
+            default 0x4011
+            help
+                Custom Product ID.
+
+        config ESP_TINYUSB_DESC_BCD_DEVICE
+            hex "bcdDevice"
+            default 0x0100
+            help
+                Version of the firmware of the USB device.
+
+        config ESP_TINYUSB_DESC_MANUFACTURER_STRING
+            string "Manufacturer name"
+            default "Espressif Systems"
+            help
+                Name of the manufacturer of the USB device.
+
+        config ESP_TINYUSB_DESC_PRODUCT_STRING
+            string "Product name"
+            default "Espressif Device"
+            help
+                Name of the USB device.
+
+        config ESP_TINYUSB_DESC_SERIAL_STRING
+            string "Serial string"
+            default "123456"
+            help
+                Serial number of the USB device.
+
+        config ESP_TINYUSB_DESC_CDC_STRING
+            depends on ESP_TINYUSB_CDC_ENABLED
+            string "CDC Device String"
+            default "Espressif CDC Device"
+            help
+                Name of the CDC device.
+
+        config ESP_TINYUSB_DESC_AUDIO_STRING
+            depends on ESP_TINYUSB_AUDIO_ENABLED
+            string "Audio Device String"
+            default "Espressif Audio (UAC2) Device"
+            help
+                Name of the UAC2 device.
+
+    endmenu # "Descriptor configuration"
+
     menu "Audio Device Class (UAC2)"
         config ESP_TINYUSB_AUDIO_ENABLED
             bool "Enable TinyUSB Audio feature"
